# agentic-ai

./: .eslintrc.json  .gitignore  README.md  app.js  package-lock.json  package.json  pyproject.toml  server.js  swagger.json  test.js
controllers/: auth.js  authController.js  authControllers.js  bookingControllers.js  userController.js  userControllers.js  users.js
db/: connectToDatabase.js
middleware/: auth.js  error-handler.js
middlwear/: auth.js  error-handler.js
models/: user.js  userModel.js
models/booking/: bookingModel.js  bookingTimeConstants.js
models/user/: pendingUserModel.js  userModel.js
routes/: auth.js  authRoutes.js  bookingRoutes.js  userRoutes.js  users.js
src/temp_project/: crew.py  main.py
utils/: ResError.js  sendVerificationMail.js  validation.js
