[project]
name = "temp_project"
version = "0.1.0"
description = "temp_project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0"
]

[project.scripts]
temp_project = "temp_project.main:run"
run_crew = "temp_project.main:run"
train = "temp_project.main:train"
replay = "temp_project.main:replay"
test = "temp_project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
